gobmkida/g3/accumulate_influence
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/accumulate_influence/src/engine/influence.c:734:7: error: use of undeclared identifier 'working_area_initialized_6'
if ( !working_area_initialized_6 ) 
      ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/accumulate_influence/src/engine/influence.c:736:1: error: use of undeclared identifier 'working_area_initialized_6'
working_area_initialized_6 = 1; 
^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/accumulate_influence/src/engine/influence.c:737:31: error: use of undeclared identifier 'working_5'
memset( working_5, 0, sizeof( working_5)); 
                              ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/accumulate_influence/src/engine/influence.c:737:9: error: use of undeclared identifier 'working_5'
memset( working_5, 0, sizeof( working_5)); 
        ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/accumulate_influence/src/engine/influence.c:740:1: error: use of undeclared identifier 'queue_4'
queue_4[0] = pos; 
^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/accumulate_influence/src/engine/influence.c:742:1: error: use of undeclared identifier 'working_5'
working_5[pos] = strength; 
^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/accumulate_influence/src/engine/influence.c:777:7: error: use of undeclared identifier 'dword_A5DF5C'
v12 = dword_A5DF5C[v11]; 
      ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/accumulate_influence/src/engine/influence.c:779:7: error: use of undeclared identifier 'dword_A5DF5C'
v14 = dword_A5DF5C[v11]; 
      ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/accumulate_influence/src/engine/influence.c:799:7: error: use of undeclared identifier 'working_5'
v19 = working_5[v12] * inv_attenuation / 4096; 
      ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/accumulate_influence/src/engine/influence.c:820:7: error: use of undeclared identifier 'working_5'
v23 = working_5[v18]; 
      ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/accumulate_influence/src/engine/influence.c:824:1: error: use of undeclared identifier 'queue_4'
queue_4[v80] = v18; 
^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/accumulate_influence/src/engine/influence.c:826:1: error: use of undeclared identifier 'working_5'
working_5[v18] = v22 + v23; 
^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/accumulate_influence/src/engine/influence.c:851:7: error: use of undeclared identifier 'working_5'
v28 = working_5[v24]; 
      ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/accumulate_influence/src/engine/influence.c:855:1: error: use of undeclared identifier 'queue_4'
queue_4[v79] = v24; 
^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/accumulate_influence/src/engine/influence.c:857:1: error: use of undeclared identifier 'working_5'
working_5[v24] = v27 + v28; 
^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/accumulate_influence/src/engine/influence.c:882:7: error: use of undeclared identifier 'working_5'
v33 = working_5[v29]; 
      ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/accumulate_influence/src/engine/influence.c:886:1: error: use of undeclared identifier 'queue_4'
queue_4[v78] = v29; 
^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/accumulate_influence/src/engine/influence.c:888:1: error: use of undeclared identifier 'working_5'
working_5[v29] = v32 + v33; 
^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/accumulate_influence/src/engine/influence.c:913:7: error: use of undeclared identifier 'working_5'
v38 = working_5[v34]; 
      ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/accumulate_influence/src/engine/influence.c:917:1: error: use of undeclared identifier 'queue_4'
queue_4[v77] = v34; 
^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/accumulate_influence/src/engine/influence.c:919:1: error: use of undeclared identifier 'working_5'
working_5[v34] = v37 + v38; 
^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/accumulate_influence/src/engine/influence.c:942:7: error: use of undeclared identifier 'working_5'
v46 = working_5[v39]; 
      ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/accumulate_influence/src/engine/influence.c:946:1: error: use of undeclared identifier 'queue_4'
queue_4[v47] = v39; 
^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/accumulate_influence/src/engine/influence.c:948:1: error: use of undeclared identifier 'working_5'
working_5[v39] = v45 + v46; 
^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/accumulate_influence/src/engine/influence.c:971:7: error: use of undeclared identifier 'working_5'
v54 = working_5[v48]; 
      ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/accumulate_influence/src/engine/influence.c:975:1: error: use of undeclared identifier 'queue_4'
queue_4[v55] = v48; 
^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/accumulate_influence/src/engine/influence.c:977:1: error: use of undeclared identifier 'working_5'
working_5[v48] = v53 + v54; 
^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/accumulate_influence/src/engine/influence.c:1000:7: error: use of undeclared identifier 'working_5'
v62 = working_5[v56]; 
      ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/accumulate_influence/src/engine/influence.c:1004:1: error: use of undeclared identifier 'queue_4'
queue_4[v63] = v56; 
^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/accumulate_influence/src/engine/influence.c:1006:1: error: use of undeclared identifier 'working_5'
working_5[v56] = v62 + v61; 
^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/accumulate_influence/src/engine/influence.c:1031:7: error: use of undeclared identifier 'working_5'
v70 = working_5[v64]; 
      ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/accumulate_influence/src/engine/influence.c:1035:1: error: use of undeclared identifier 'queue_4'
queue_4[v71] = v64; 
^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/accumulate_influence/src/engine/influence.c:1038:1: error: use of undeclared identifier 'working_5'
working_5[v64] = v70 + v69; 
^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/accumulate_influence/src/engine/influence.c:1043:24: error: use of undeclared identifier 'queue_4'
for ( i = 0LL; ; v72 = queue_4[i] ) 
                       ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/accumulate_influence/src/engine/influence.c:1045:7: error: use of undeclared identifier 'working_5'
v74 = working_5[v72]; 
      ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/accumulate_influence/src/engine/influence.c:1050:1: error: use of undeclared identifier 'working_5'
working_5[v72] = 0; 
^
36 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/accumulate_influence/src/obj/1/influence.o] Error 1
